style: sonarLint에 따른 코드 정리